fixed some alignment issues

--- a/gh_portfolio/static/index.css
+++ b/gh_portfolio/static/index.css
@@ -1,15 +1,27 @@
 .profile-pic {
-	max-width: 155px;
-	max-height: 155px;
+    max-width: 155px;
+    max-height: 155px;
 }
 
-.sidebar {
-    background: #f7f7f9;
-    padding-top: 1%;
-    height: 100%;
+.page {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
+
+    display: flex;
+    align-items: center;
+}
+
+.contact-card {
+    width: 50%;
+    padding: 1%;
+}
+
+.shadow {
+    box-shadow: 0px 0px 5px;
+    margin-top: 1%;
 }
 
 .profile-pic:hover {
-	opacity: .5;	
+    opacity: .5;	
 }
 
